# rsla_vision

./: README.md  package.xml  setup.cfg  setup.py
rsla_vision/: rsla_vision.py  rsla_vision_record.py
rsla_vision/dataset/rsla_vision.v1i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
rsla_vision/dataset/rsla_vision.v1i.yolov8/train/labels/: 2024-08-05-143234_3_jpg.rf.0502a2d519fb296b005d0ac6e20bef00.txt  2024-08-05-143234_3_jpg.rf.9d5167c405f48c7e69421f4cbb860977.txt  2024-08-05-143234_3_jpg.rf.f21a0942cf469b7b81de72ab914d7e86.txt  2024-08-05-143234_4_jpg.rf.6733908851d140a130a9b25965089aa2.txt  2024-08-05-143234_4_jpg.rf.6b9fbfd0c20e11f68a1baa4c609e76cf.txt  2024-08-05-143234_4_jpg.rf.8eb392d2374397dfa762dd7596ca3b56.txt  2024-08-05-143303_jpg.rf.168c814e00d04af4cd3c3d23a6a94ebc.txt  2024-08-05-143303_jpg.rf.b21a898fcbe47e7ae4b8d9c28e799f92.txt  2024-08-05-143303_jpg.rf.d8fba69de80f91b74ec20c2f641f3585.txt  2024-08-05-143304-2-_jpg.rf.26557ecacc26b5bef24a512d065f5f12.txt  2024-08-05-143304-2-_jpg.rf.cc5c425d24d82b0ce0fd9d48210b8054.txt  2024-08-05-143304-2-_jpg.rf.d597eca4fd2e822c14198e9b3dac93ed.txt  2024-08-05-143304_jpg.rf.103b2fae9480a701a96252905337569b.txt  2024-08-05-143304_jpg.rf.1dc3637eed1dfd9ee4bcc2dbc2faa631.txt  2024-08-05-143304_jpg.rf.d5eaa6b8a475ad362eef507d44f56b7f.txt  2024-08-05-143305-1-_jpg.rf.52630c02d2320a49a8c118712d0b3a1d.txt  2024-08-05-143305-1-_jpg.rf.9cce848cdee8cfe8f38646d339f8f5b7.txt  (+92 more)
rsla_vision/runs/detect/train/: args.yaml
rsla_vision/runs/detect/train2/: args.yaml
(+11 files in other folders)
